# strands-engine

./: .gitignore  A2A_SERVER.md  CHANGELOG.md  CHATBOT_README.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TESTING.md  TEST_ADDITIONS_AND_BUG_FIXES_SUMMARY.md  chatbot.py  demo-headless.sh  demo-interactive.sh  pyproject.toml  pytest.ini  requirements.txt  run_sniff_debug.sh  run_tests.py  test_messages.py  test_sniff.py  test_sniff_with_credentials.py
.github/workflows/: lint.yml  release.yml  test.yml
docs/: A2A_ARCHITECTURE.md  A2A_SYSTEM_PROMPT_GENERATION.md  ARCHITECTURE.md  FRAMEWORK_ADAPTERS.md  bedrock_region_resolution.md
examples/: basic_usage.py  file_processing_example.py  tool_configuration_example.py
examples/skills/: README.md  all-skills.json  coding.json  math.json  research.yaml
sample-model-configs/: README.md  anthropic-claude3-haiku.json  anthropic-claude35-sonnet.json  bedrock-claude3-sonnet.json  bedrock-cohere-command.json  bedrock-llama2-70b.json  bedrock-titan-text.json  litellm-azure-gpt4.json  litellm-cohere-command.json  litellm-gpt4o.json  litellm-replicate-llama.json  litellm-vertex-gemini.json  ollama-codellama.json  ollama-llama2.json  ollama-mistral.json  openai-function-calling.json  openai-gpt35-turbo.json  openai-gpt4o.json
strands_agent_factory/: __init__.py  agent.py  config.py  conversation.py  engine.py  factory.py  messages.py  ptypes.py  python_tools.py  session.py  utils.py
strands_agent_factory/adapters/: __init__.py  anthropic.py  base.py  bedrock.py  generic.py  litellm.py  ollama.py  openai.py
strands_agent_factory/core/: __init__.py  agent.py  config.py  exceptions.py  factory.py  types.py  utils.py
strands_agent_factory/framework/: __init__.py  anthropic_adapter.py  base_adapter.py  bedrock_adapter.py  litellm_adapter.py  ollama_adapter.py  openai_adapter.py
strands_agent_factory/handlers/: callback.py
strands_agent_factory/messaging/: content.py  generator.py
strands_agent_factory/scripts/: a2a_server.py  chatbot.py
strands_agent_factory/session/: conversation.py  manager.py
strands_agent_factory/tools/: __init__.py  a2a.py  base_adapter.py  factory.py  mcp.py  mcp_adapters.py  python.py  python_adapter.py  types.py  utils.py
strands_engine/: __init__.py  agent.py  callback_handler.py  config.py  conversation.py  engine.py  ptypes.py  session.py  types.py  utils.py
strands_engine/framework/: __init__.py  anthropic_adapter.py  base_adapter.py  bedrock_adapter.py  litellm_adapter.py  ollama_adapter.py  openai_adapter.py
strands_engine/tools/: __init__.py  base_adapter.py  discovery.py  factory.py  mcp_adapters.py  python_adapter.py
tests/: README.md  __init__.py  conftest.py  test_bedrock_region_resolution.py  test_engine.py  test_tool_factory.py
tests/fixtures/: __init__.py  sample_configs.py
tests/integration/: __init__.py  test_a2a_integration.py  test_a2a_server_integration.py  test_adapter_integration.py  test_factory_integration.py
tests/unit/: __init__.py  test_a2a_server.py  test_a2a_skills.py  test_a2a_tools.py  test_adapters.py  test_agent_proxy_no_mcp.py  test_callback_handler_max_line_length.py  test_config.py  test_conversation_manager.py  test_messaging.py  test_tools.py  test_utils.py
